jewel-tabbar: when scrolling, fix hiding scrollbar on iOS devices that was not working as expected

--- a/frameworks/projects/Jewel/src/main/resources/defaults.css
+++ b/frameworks/projects/Jewel/src/main/resources/defaults.css
@@ -3487,7 +3487,13 @@ j|Snackbar {
   scrollbar-width: none;
 }
 .jewel.tabbar::-webkit-scrollbar {
-  display: none;
+  display: none !important;
+  width: 0 !important;
+  height: 0 !important;
+  background-color: transparent;
+}
+.jewel.tabbar::-webkit-scrollbar-thumb {
+  display: none !important;
 }
 .jewel.tabbar > .content {
   display: flex;
@@ -3510,6 +3516,7 @@ j|TabBar {
 }
 
 .jewel.tabbarbutton {
+  margin: 0;
   padding: 0 24px;
   position: relative;
   display: flex;
