--- a/frameworks/projects/Jewel/src/main/sass/components/_tabbar.sass
+++ b/frameworks/projects/Jewel/src/main/sass/components/_tabbar.sass
@@ -31,7 +31,13 @@
         -ms-overflow-style: none  // IE 10+
         scrollbar-width: none  // Firefox
         &::-webkit-scrollbar 
-            display: none  // Safari and Chrome
+            display: none !important // Safari and Chrome
+            width: 0 !important
+            height: 0 !important
+            background-color: transparent
+
+        &::-webkit-scrollbar-thumb
+            display: none !important
 
         > .content
             display: flex
@@ -54,16 +60,16 @@ j|TabBar
     IDataProviderItemRendererMapper: ClassReference("org.apache.royale.jewel.beads.itemRenderers.DataItemRendererFactoryForCollectionView")
 
 // Jewel TabBarButtonItemRenderer
-// $tabbarbutton-margin: 0 !default
+$tabbarbutton-margin: 0 !default
 $tabbarbutton-padding: 0 24px !default
-$tabbarbutton-margin-height: 48px
+// $tabbarbutton-margin-height: 48px
 
 // TabBarButtonItemRenderer variables
 .jewel
     &.tabbarbutton
         // height: $tabbarbutton-margin-height
         // min-height: $tabbarbutton-margin-height
-        // margin: $tabbarbutton-margin
+        margin: $tabbarbutton-margin
         padding: $tabbarbutton-padding
         
         position: relative
